# candlecrawl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  QueryLake_Integration_Plan.md  README.md  RELEASE_BRANCH_POLICY.md  VERSIONING.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  consumer-compat-dispatch.yml  python-package-publish-dry-run.yml  python-package-publish.yml  release-artifact.yml  security.yml
app/: __init__.py  artifacts.py  chunking.py  config.py  contract_check.py  cost_endpoints.py  cost_tracking.py  framework_shims.py  frontier.py  hermes_bcas.py  http_client.py  main.py  metrics.py  model_pricing.py  models.py  querylake_files_sink.py  scraper.py  service.py
app/compat/: __init__.py  firecrawl_v2.py
app/providers/: __init__.py  base.py  document_ocr.py  openrouter.py  scrapedo.py  serper.py
app/scripts/: provider_smoketests.py
contracts/: openapi-v1.yaml  openapi-v2-strict.yaml
docs/: API_AND_OPERATIONS.md  ARCHITECTURE.md  BRANCH_PROTECTION_POLICY.md  GETTING_STARTED.md  RELEASE_RUNBOOK.md  TRUSTED_PUBLISHING_SETUP.md
legacy/: hermes_bcas.py
scripts/: check_package_boundaries.py
src/candlecrawl/: __init__.py  __main__.py  cli.py  client.py  errors.py  schemas.py  trace.py
src/candlecrawl/_server/: __init__.py  chunking.py  config.py  cost_endpoints.py  cost_tracking.py  frontier.py  http_client.py  main.py  metrics.py  model_pricing.py  models.py  querylake_files_sink.py  scraper.py
src/candlecrawl/_server/compat/: __init__.py  firecrawl_v2.py
src/candlecrawl/_server/providers/: __init__.py  base.py  document_ocr.py  openrouter.py  scrapedo.py  serper.py
src/candlecrawl/_server/scripts/: __init__.py  provider_smoketests.py
tests/: conftest.py  test_api.py  test_artifact_sinks.py  test_cli_service_smoke.py  test_crawl_extreme.py  test_crawl_policies.py  test_document_ocr_provider.py  test_frontier.py  test_hermes_compat_flag.py  test_hermes_endpoints.py  test_http_client.py  test_openapi_action_contract.py  test_openapi_contract_artifact.py  test_package_cli.py  test_performance.py  test_providers.py  test_querylake_files_sink.py  test_scraper_edge_cases.py  test_scraper_runtime.py  test_sdk_client.py  test_sdk_smoke.py  test_v2_contract_shaping.py
tests/wikipedia_table/: firecrawl_paid_output.json  firecrawl_paid_output.md
