[project]
name = "candlecrawl"
version = "1.0.0"
description = "Robyn-based web scraping and crawling service"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "robyn==0.79.0",
  "httpx==0.27.2",
  "pydantic==2.11.7",
  "pydantic-settings>=2.5.2,<3.0.0",
  "markdownify==0.14.1",
  "beautifulsoup4==4.12.3",
  "loguru==0.7.2",
  "pypdf==6.7.1",
  "Pillow==12.1.1",
  "playwright==1.54.0",
  "redis==5.0.8",
  "rq==1.16.2",
  "tiktoken==0.8.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "rtest==0.0.46",
  "ruff==0.12.1",
]

[tool.pytest.ini_options]
markers = [
  "performance: marks performance/integration tests",
]
asyncio_mode = "auto"
addopts = "-m \"not performance\""

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["app/__pycache__", "tests/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E712"]
"app/hermes_bcas.py" = ["E402"]
